// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when elapsedFraction is 0.0 1`] = `
<div>
  <svg>
    <defs>
      <pattern
        height="10"
        id="remainingPattern"
        patternTransform="rotate(-90)"
        patternUnits="userSpaceOnUse"
        width="10"
      >
        <rect
          fill="lightgray"
          height="10"
          width="10"
        />
        <line
          stroke="white"
          stroke-width="5"
          x1="0"
          x2="0"
          y1="0"
          y2="10"
        />
      </pattern>
    </defs>
    <g
      class="remaining"
    >
      <path
        d="M0,-93.333A93.333,93.333,0,1,1,0,93.333A93.333,93.333,0,1,1,0,-93.333M0,-33.333A33.333,33.333,0,1,0,0,33.333A33.333,33.333,0,1,0,0,-33.333Z"
        fill="url(#remainingPattern)"
        stroke="none"
      />
    </g>
  </svg>
</div>
`;

exports[`when elapsedFraction is 0.5 1`] = `
<div>
  <svg>
    <defs>
      <pattern
        height="10"
        id="remainingPattern"
        patternTransform="rotate(90)"
        patternUnits="userSpaceOnUse"
        width="10"
      >
        <rect
          fill="lightgray"
          height="10"
          width="10"
        />
        <line
          stroke="white"
          stroke-width="5"
          x1="0"
          x2="0"
          y1="0"
          y2="10"
        />
      </pattern>
    </defs>
    <g
      class="remaining"
    >
      <path
        d="M0,93.333A93.333,93.333,0,1,1,0,-93.333L0,-33.333A33.333,33.333,0,1,0,0,33.333Z"
        fill="url(#remainingPattern)"
        stroke="none"
      />
    </g>
  </svg>
</div>
`;

exports[`when elapsedFraction is 1.0 1`] = `
<div>
  <svg>
    <defs>
      <pattern
        height="10"
        id="remainingPattern"
        patternTransform="rotate(270)"
        patternUnits="userSpaceOnUse"
        width="10"
      >
        <rect
          fill="lightgray"
          height="10"
          width="10"
        />
        <line
          stroke="white"
          stroke-width="5"
          x1="0"
          x2="0"
          y1="0"
          y2="10"
        />
      </pattern>
    </defs>
    <g
      class="remaining"
    >
      <path
        d="M0,-93.333L0,-33.333Z"
        fill="url(#remainingPattern)"
        stroke="none"
      />
    </g>
  </svg>
</div>
`;
